# kitin

./: .gitattributes  .gitignore  .kit  Cargo.toml  README.md  build.zig  kit.json  kitin.example.yaml  kitin.yaml
src/: cli.zig  init.zig  initkit.rs  kit.rs  kit.zig  kitin.rs  kitin.zig  log.zig  main.rs  main.zig  project.rs
