[package]
name = "kitin"
version = "0.1.2"
edition = "2021"
description = "A small project management tool."
license = "MPL-2.0"

[lib]
name = "libkit"
path = "src/kitin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.25"
sugar_path = "0.0.5"